# edgar-mcp

./: .gitignore  README.md  pyproject.toml
edgar_mcp/: __init__.py  server.py
