[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "edgar-mcp"
version = "0.1.1"
description = "MCP server for SEC EDGAR financial data - 6 tools for filings, financials, and metrics"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
dependencies = [
    "requests",
    "fastmcp",
]

[project.urls]
Homepage = "https://github.com/henrysouchien/edgar-mcp"
Source = "https://github.com/henrysouchien/edgar-mcp"
Issues = "https://github.com/henrysouchien/edgar-mcp/issues"

[project.scripts]
edgar-mcp = "edgar_mcp.server:main"

[tool.hatch.build.targets.wheel]
packages = ["edgar_mcp"]

[tool.hatch.build.targets.sdist]
include = ["edgar_mcp/", "pyproject.toml", "README.md", "LICENSE"]
